# Subject-Recommender

./: .gitignore  Book1.xlsx  CHANGELOG.md  README.md  agents.md  input-results.json  psudeocode.md  pyproject.toml  requirements.txt  tmp_patch.txt
.github/workflows/: ci.yml
data/: ALevel_test-grades.json  ALevel_test-predicted.json  gcse_test-grades.json  gcse_test-predicted.json  generate_history_from_predicted.py  history.json  migrate.py  predicted_grades.json  reset.py  schema.txt
output/: history.md  reset.py  results.json
src/subject_recommender/: __init__.py  cli.py  config.py  history_reset.py  io.py
src/subject_recommender/preprocessing/: __init__.py  aggregation.py  normalisation.py  weighting.py
src/subject_recommender/sessions/: __init__.py  generator.py
tests/: AlgoTesting.py  conftest.py  reset.py  test_cli.py  test_history_reset.py  test_io.py  test_preprocessing.py  test_sessions.py
