[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subject-recommender"
version = "0.1.0"
description = "Subject Recommender: library and CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Rajveer Sandhu" }]
keywords = ["recommender", "education", "subjects"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1.0",
  "coverage[toml]>=7.3.0",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
]

[project.scripts]
subject-recommender = "subject_recommender.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["subject_recommender*"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*Testing.py"]

[tool.coverage.run]
source = ["subject_recommender"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.9"
strict = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
mypy_path = ["src"]

